syntax = "proto3";
package pb;
option go_package="github.com/grpc/gobus/user/pb";

service UserServices{
    rpc UserSignUp(UserDataRequest) returns (result);
    rpc UserLogin(LoginRequest)returns (result);
    rpc EditUser(UserDataRequest)returns (result);
    rpc DeleteUserById(IdRequest)returns (result);
    rpc FindUserById(IdRequest)returns (result);
    rpc CreateUser(UserDataRequest)returns (result);
}
message UserDataRequest{
    string UserName = 1;
    string Password = 2;
    string Email = 3;
}
message LoginRequest{
    string Username = 1;
    string Password = 2;
}
message IdRequest{
    uint32 Id = 1;
}
message result{
    string status = 1;
    string error = 2;
    string message = 3;
}
